--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,6 +79,17 @@ header a {
 }
 
 /*PLATE FORM*/
+form {
+  background: #fff;
+  padding: 0 20px 20px 20px;
+  border-radius: 4px;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.05);
+}
+
+form h3 {
+  color: var(--primary);
+}
+
 label, input {
   display: block;
 }
@@ -91,6 +102,7 @@ input {
   border: 1px solid #ddd;
   border-radius: 4px;
   box-sizing: border-box;
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.05);
 }
 
 form button {
